Fix: makes 'footnotes-column' wider The sorting arrow symbol was overlapping with the column immidately  adjacent
This change provides more room for the sorting arrow symbol

--- a/app/assets/stylesheets/components/tables.scss
+++ b/app/assets/stylesheets/components/tables.scss
@@ -63,8 +63,8 @@ table {
     max-width: 160px !important;
   }
   .footnotes-column {
-    min-width: 70px !important;
-    max-width: 70px !important;
+    min-width: 100px !important;
+    max-width: 100px !important;
   }
   .last_updated-column {
     min-width: 140px;
